hard-gists/25d48938c07b73541361/run.log
=== Docker Run Log for 25d48938c07b73541361 ===
Started at: Mi 29. Okt 13:09:21 CET 2025

[2025-10-29 13:09:21] START: Running container for 25d48938c07b73541361
[2025-10-29 13:09:22] SUCCESS: Container 46b146d777f52dc9cec7b768f158c8d4550f8ed280bb3d27dc07bfa1dda14f56 started for 25d48938c07b73541361
=== Container logs for 25d48938c07b73541361 ===
  File "/snippet.py", line 44
    print title,url
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 25d48938c07b73541361 ===
[2025-10-29 13:09:24] INFO: Container 46b146d777f52dc9cec7b768f158c8d4550f8ed280bb3d27dc07bfa1dda14f56 has stopped
